--- a/android/CMakeLists.txt
+++ b/android/CMakeLists.txt
@@ -7,6 +7,7 @@ set(ANBOXD_SOURCES
     ${CMAKE_SOURCE_DIR}/src/anbox/rpc/message_processor.cpp
     ${CMAKE_SOURCE_DIR}/src/anbox/rpc/pending_call_cache.cpp
     ${CMAKE_SOURCE_DIR}/src/anbox/common/fd.cpp
+    service/activity_manager_interface.cpp
     service/platform_service.cpp
     service/platform_service_interface.cpp
     service/platform_api_stub.cpp
