--- a/android/anboxd.rc
+++ b/android/anboxd.rc
@@ -1,5 +1,5 @@
 service anboxd /system/bin/anboxd
-    class boot
+    class core
 
 # We will ever only have a single network interface we need to care
 # about so we can add static setup for this one here.
