--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -10,7 +10,7 @@ grade: devel
 
 apps:
   anbox:
-    command: bin/anbox-wrapper.sh run
+    command: bin/anbox-wrapper.sh
   container-manager:
     command: bin/container-manager.sh
     daemon: simple
