Unload AppArmor profile for container management process
If we run the management process with the AppArmor profile loaded
from snap-confine various ashmem/binder operations are failing with
permission denied errors. To workaround this until this problem
is fixed we simply unload the AppArmor profile and continue to
execute completely without any profile loaded.

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -36,6 +36,10 @@ parts:
       - bin/anbox-bridge.sh
       - bin/anbox-wrapper.sh
       - bin/container-manager.sh
+  apparmor:
+    plugin: nil
+    stage-packages:
+      - apparmor
   lxc:
     source: git://github.com/morphis/lxc
     source-branch: snappy-support
