Start bridge as part of the container manager

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -14,10 +14,12 @@ apps:
   container-manager:
     command: bin/container-manager.sh
     daemon: simple
-  bridge:
-    command: bin/anbox-bridge.sh start
-    stop-command: bin/anbox-bridge.sh stop
-    daemon: oneshot
+# FIXME: a oneshot unit with start/stop commands needs also RemainAfterExit=yes
+# but this isn't supported by snapd yet. See LP #1647169 for details.
+#  bridge:
+#    command: bin/anbox-bridge.sh start
+#    stop-command: bin/anbox-bridge.sh stop
+#    daemon: oneshot
 
 parts:
   android-rootfs:
