kernel: ashmem: use kallsyms_lookup_name for internal symbol access

--- a/kernel/ashmem/Makefile
+++ b/kernel/ashmem/Makefile
@@ -1,14 +1,7 @@
-ccflags-y += -I$(src) -Wno-error=implicit-int
-
-ifneq ($(KERNELRELEASE),)
+ccflags-y += -I$(src) -Wno-error=implicit-int -Wno-int-conversion
 obj-m := ashmem_linux.o
 ashmem_linux-y := deps.o ashmem.o
 
-$(obj)/deps.o: $(src)/deps.h
-
-$(obj)/deps.h: $(src)/gen_deps.sh
-	sudo $(src)/gen_deps.sh > $@
-else
 KERNEL_SRC ?= /lib/modules/$(shell uname -r)/build
 
 all:
@@ -19,4 +12,3 @@ install:
 
 clean:
 	rm -rf deps.h *.o *.ko *.mod.c *.symvers *.order .*.cmd .tmp_versions
-endif
