--- a/kernel/binder/Makefile
+++ b/kernel/binder/Makefile
@@ -1,14 +1,7 @@
-ccflags-y += -I$(src)
-
-ifneq ($(KERNELRELEASE),)
+ccflags-y += -I$(src) -Wno-int-conversion
 obj-m := binder_linux.o
 binder_linux-y := deps.o binder.o
 
-$(obj)/deps.o: $(src)/deps.h
-
-$(obj)/deps.h: $(src)/gen_deps.sh
-	sudo $(src)/gen_deps.sh > $@
-else
 KERNEL_SRC ?= /lib/modules/$(shell uname -r)/build
 
 all:
@@ -19,4 +12,3 @@ install:
 
 clean:
 	rm -rf deps.h *.o *.ko *.mod.c *.symvers *.order .*.cmd .tmp_versions
-endif
