--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ stage/
 prime/
 *.snap
 CMakeLists.txt.user
+*.o.cmd
+*.symvers
+*.o
+*.ko
+*.ko.cmd
+*.mod.c
+*.mod.o
+modules.order
+.tmp_versions
