Add unit tests for LayerComposer

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -118,6 +118,7 @@ set(SOURCES
     anbox/graphics/layer_composer.cpp
     anbox/graphics/program_family.cpp
     anbox/graphics/primitives.h
+    anbox/graphics/renderer.h
 
     anbox/graphics/emugl/ColorBuffer.cpp
     anbox/graphics/emugl/DisplayManager.cpp
