Fix build with warnings turned on.

--- a/external/android-emugl/CMakeLists.txt
+++ b/external/android-emugl/CMakeLists.txt
@@ -1,6 +1,10 @@
 # Don't treat any warnings as error as we take the source directly from
 # upstream and just compile it.
 set(CMAKE_C_FLAGS "-Wall")
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wall")
+
+# Ensure -fPIC
+set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 
 include_directories(
     ${CMAKE_SOURCE_DIR}/src
