--- a/external/xdg/CMakeLists.txt
+++ b/external/xdg/CMakeLists.txt
@@ -19,6 +19,6 @@ enable_testing()
 add_definitions(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN -DBOOST_TEST_MODULE=xdg)
 add_executable(xdg_test xdg_test.cpp)
 set_property(TARGET xdg_test PROPERTY CXX_STANDARD 11)
-target_link_libraries(xdg_test xdg)
+target_link_libraries(xdg_test xdg ${Boost_LIBRARIES})
 
 add_test(xdg_test xdg_test)
