Setup Android rootfs mount on container manager startup

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -71,6 +71,9 @@ set(SOURCES
     anbox/common/type_traits.h
     anbox/common/message_channel.cpp
     anbox/common/scope_ptr.h
+    anbox/common/loop_device.cpp
+    anbox/common/loop_device_allocator.cpp
+    anbox/common/mount_entry.cpp
 
     anbox/testing/gtest_utils.h
 
