Add missing build dependencies

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -100,8 +100,10 @@ parts:
       - libegl1-mesa-dev
       - libgles2-mesa-dev
       - libglib2.0-dev
+      - libglm-dev
       - libgtest-dev
       - libprotobuf-dev
+      - libproperties-cpp-dev
       - libsdl2-dev
       - pkg-config
       - protobuf-compiler
