--- a/setup/gui/anbox.desktop
+++ b/setup/gui/anbox.desktop
@@ -3,5 +3,6 @@ Name=Anbox
 GenericName=Android in a box
 Version=1.0
 Type=Application
+Icon=${SNAP}/meta/gui/icon.png
 Exec=anbox launch --package=org.anbox.appmgr --component=org.anbox.appmgr.AppViewActivity
 Terminal=false
