--- a/data/anbox.desktop
+++ b/data/anbox.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=Anbox
 Exec=anbox run --rootfs=android-rootfs
-Icon=anbox.png
+Icon=anbox
 Terminal=false
 Type=Application
 X-Ubuntu-Touch=true
