Fix compilation on 17.04.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,5 @@
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare")
+
 include_directories(
   ${Boost_INCLUDE_DIRS}
   ${CMAKE_SOURCE_DIR}
@@ -16,8 +18,8 @@ macro(ANBOX_ADD_TEST test_name src)
 
     anbox-core
 
-    gmock
-    gmock_main
+    ${GMOCK_LIBRARIES}
+    ${GTEST_BOTH_LIBRARIES}
 
     ${ARGN}
 
