Add cmake-extras as build dependency

--- a/packaging/snap/snapcraft.yaml
+++ b/packaging/snap/snapcraft.yaml
@@ -84,6 +84,7 @@ parts:
       - build-essential
       - cmake
       - cmake-data
+      - cmake-extras
       - debhelper
       - dbus
       - google-mock
