--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "external/properties-cpp"]
 	path = external/properties-cpp
 	url = https://github.com/oleid/properties-cpp.git
+[submodule "external/googletest"]
+	path = external/googletest
+	url = https://github.com/google/googletest.git
