--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Git: https://github.com/anbox/anbox.git
 
 Package: anbox-common
 Architecture: all
-Depends: ${misc:Depends} dbus-user-session
+Depends: ${misc:Depends}, dbus-user-session
 Description: Common files necessary for Anbox
  .
  This package contains necessary things which can't be shipped
