Always try to restart anbox session service when it crashes

--- a/data/anbox.service.in
+++ b/data/anbox.service.in
@@ -2,7 +2,11 @@
 Description=Anbox session manager
 
 [Service]
+Type=simple
 ExecStart=@SNAP_MOUNT_DIR@/anbox session-manager
+Restart=always
+StartLimitIntervalSec=3
+StartLimitBurst=1
 
 [Install]
 WantedBy=default.target
