Install necessary resource files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,3 +104,6 @@ if (NOT "${HOST_CMAKE_C_COMPILER}" STREQUAL "")
   message(STATUS "Host C compiler: ${HOST_CMAKE_C_COMPILER}")
   message(STATUS "Host C compiler: ${HOST_CMAKE_CXX_COMPILER}")
 endif()
+
+install(FILES snap/gui/icon.png DESTINATION share/anbox/ui)
+
