Add missing build dependency on libsdl2-image-dev

--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -111,6 +111,7 @@ parts:
       - libprotobuf-dev
       - libproperties-cpp-dev
       - libsdl2-dev
+      - libsdl2-image-dev
       - pkg-config
       - protobuf-compiler
     stage-packages:
