Make sure helper libraries get built as static libs
Make sure helper libraries get built as static libs regardless
of the cmake version being used.

This fixes issue 217.

Signed-off-by: Bernhard Rosenkränzer <bero@lindev.ch>

--- a/external/android-emugl/host/libs/GLESv1_dec/CMakeLists.txt
+++ b/external/android-emugl/host/libs/GLESv1_dec/CMakeLists.txt
@@ -20,5 +20,5 @@ if ("${cmake_build_type_lower}" STREQUAL "trace")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OPENGL_DEBUG}")
 endif()
 
-add_library(GLESv1_dec ${SOURCES} ${GENERATED_SOURCES})
+add_library(GLESv1_dec STATIC ${SOURCES} ${GENERATED_SOURCES})
 target_link_libraries(GLESv1_dec OpenglCodecCommon)
