Rework versioning to include git rev in snap version

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,12 +97,11 @@ set(ANBOX_TRANSLATOR_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR}/anbox/translators)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DTRANSLATOR_INSTALL_DIR=\\\"${CMAKE_INSTALL_PREFIX}/${ANBOX_TRANSLATOR_INSTALL_DIR}\\\"")
 
 if (NOT ANBOX_VERSION)
-    set(ANBOX_VERSION 2)
-    if ("${cmake_build_type_lower}" STREQUAL "release")
-        set(ANBOX_VERSION_SUFFIX "")
-    else()
-        set(ANBOX_VERSION_SUFFIX dev)
-    endif()
+    exec_program("git" ${CMAKE_SOURCE_DIR} ARGS "rev-parse --short HEAD" OUTPUT_VARIABLE GIT_COMMIT_HASH)
+    set(ANBOX_VERSION "local-${GIT_COMMIT_HASH}")
+endif()
+if (ANBOX_VERSION_SUFFIX)
+    set(ANBOX_VERSION "${ANBOX_VERSION}-${ANBOX_VERSION_SUFFIX}")
 endif()
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/src/anbox/build/version.h.in
                ${CMAKE_CURRENT_SOURCE_DIR}/src/anbox/build/version.h)
