--- a/snapcraft.yaml
+++ b/snapcraft.yaml
@@ -1,9 +1,11 @@
 name: anbox
-# NOTE: Always only use increasing numeric values here. This is
-# passed down into cmake and assigned to an integer variable which
-# can be used for version number comparision inside the code base
-# to accomondate for any breaking changes.
 version: 3
+version-script: |
+  if [ "$SNAPCRAFT_GRADE" = "stable" ]; then
+    echo $SNAPCRAFT_PROJECT_VERSION
+  else
+    echo $SNAPCRAFT_PROJECT_VERSION-$(git rev-parse --short HEAD)
+  fi
 summary: Android in a Box
 description: |
   Runtime for Android applications which runs a full Android system
