Add test case for our restricted app manager

--- a/tests/anbox/CMakeLists.txt
+++ b/tests/anbox/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(android)
+add_subdirectory(application)
 add_subdirectory(support)
 add_subdirectory(common)
 add_subdirectory(graphics)
