Drop upstart/systemctl session jobs
We don't use them anymore as we now completely rely on `anbox launch` to
start the session manager. This lets us remove another part which can't
be shipped inside the snap package.

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Vcs-Git: https://github.com/anbox/anbox.git
 
 Package: anbox-common
 Architecture: all
-Depends: ${misc:Depends}, dbus-user-session
+Depends: ${misc:Depends}
 Description: Common files necessary for Anbox
  .
  This package contains necessary things which can't be shipped
