Add support for client side decorations

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -123,7 +123,7 @@ set(SOURCES
     anbox/graphics/buffer_queue.cpp
     anbox/graphics/buffered_io_stream.cpp
     anbox/graphics/gl_renderer_server.cpp
-    anbox/graphics/density.h
+    anbox/graphics/density.cpp
     anbox/graphics/rect.cpp
     anbox/graphics/layer_composer.cpp
     anbox/graphics/multi_window_composer_strategy.cpp
