--- a/kernel/binder/Makefile
+++ b/kernel/binder/Makefile
@@ -1,4 +1,4 @@
-ccflags-y += -I$(src) -Wno-int-conversion
+ccflags-y += -I$(src) -Wno-int-conversion -DCONFIG_ANDROID_BINDER_DEVICES="\"binder\""
 obj-m := binder_linux.o
 binder_linux-y := deps.o binder.o
 
