added uninstall target to cmake to allow make uninstall operation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -120,3 +120,10 @@ endif()
 
 install(FILES data/ui/loading-screen.png DESTINATION share/anbox/ui)
 
+# uninstall target
+configure_file("${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
+               "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
+               IMMEDIATE @ONLY)
+add_custom_target(uninstall "${CMAKE_COMMAND}"
+                  -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")
+
