Configure default resource and data directories from CMake
As anbox is expected to installed in two ways (`snap` or `make install`),
it should be enough to get `snap` ENV or configure by cmake.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@ build*/
 parts/
 stage/
 prime/
+snap/
+android-images/
 *.snap
 CMakeLists.txt.user
 *.o.cmd
@@ -14,6 +16,8 @@ CMakeLists.txt.user
 modules.order
 .tmp_versions
 .idea
+src/anbox/config.h
+
 
 debian/anbox-modules-dkms.debhelper.log
 debian/anbox-modules-dkms.substvars
