--- a/src/anbox/config.h.in
+++ b/src/anbox/config.h.in
@@ -48,6 +48,10 @@ class SystemConfiguration {
   boost::filesystem::path data_path;
   boost::filesystem::path resource_path;
 
+ private:
+  static constexpr const char *default_resource_path{"@ANBOX_RESOURCE_DIR_FULL@"};
+  static constexpr const char *default_path_path{"@ANBOX_STATEDIR_FULL@"};
+
 };
 }  // namespace anbox
 
