--- a/external/android-emugl/host/libs/libOpenGLESDispatch/CMakeLists.txt
+++ b/external/android-emugl/host/libs/libOpenGLESDispatch/CMakeLists.txt
@@ -3,7 +3,8 @@ set(SOURCES
     GLESv2Dispatch.cpp
     GLESv1Dispatch.cpp)
 
-add_library(OpenGLESDispatch STATIC ${SOURCES} ${GENERATED_SOURCES})
+add_library(OpenGLESDispatch STATIC ${SOURCES})
+add_dependencies(OpenGLESDispatch GLHeaders)
 target_link_libraries(OpenGLESDispatch
     emugl_common
     GLESv2_dec
