--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,6 +18,7 @@ include_directories(
   ${CMAKE_SOURCE_DIR}/external/process-cpp-minimal/include
   ${CMAKE_SOURCE_DIR}/external/android-emugl/shared
   ${CMAKE_SOURCE_DIR}/external/android-emugl/host/include
+  ${CMAKE_BINARY_DIR}/external/android-emugl/host/include
   ${CMAKE_SOURCE_DIR}/external/android-emugl/shared/OpenglCodecCommon
   ${CMAKE_SOURCE_DIR}/external/android-emugl/host/libs
   ${CMAKE_SOURCE_DIR}/external/android-emugl/host/include/libOpenglRender
