--- a/external/android-emugl/CMakeLists.txt
+++ b/external/android-emugl/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(
     ${CMAKE_SOURCE_DIR}/src
     ${CMAKE_SOURCE_DIR}/external/android-emugl/shared
     ${CMAKE_SOURCE_DIR}/external/android-emugl/host/include
+    ${CMAKE_BINARY_DIR}/external/android-emugl/host/include
     ${CMAKE_SOURCE_DIR}/external/android-emugl/shared/OpenglCodecCommon
     ${CMAKE_SOURCE_DIR}/external/android-emugl/host/libs
     ${CMAKE_SOURCE_DIR}/external/android-emugl/host/include/libOpenglRender
