--- a/debian/control
+++ b/debian/control
@@ -2,11 +2,51 @@ Source: anbox
 Section: misc
 Priority: optional
 Maintainer: Simon Fels <morphis@gravedo.de>
-Build-Depends: debhelper (>= 7), dkms, dh-systemd
+Build-Depends: debhelper (>= 7),
+               dkms,
+               pkg-config,
+               dh-systemd,
+               cmake,
+               cmake-data,
+               google-mock,
+               libmirclient-dev,
+               libboost-dev,
+               libboost-filesystem-dev,
+               libboost-log-dev,
+               libboost-iostreams-dev,
+               libboost-program-options-dev,
+               libboost-system-dev,
+               libboost-test-dev,
+               libboost-thread-dev,
+               libcap-dev,
+               libdbus-1-dev,
+               libdbus-cpp-dev,
+               libegl1-mesa-dev,
+               libgles2-mesa-dev,
+               libglib2.0-dev,
+               libglm-dev,
+               libgtest-dev,
+               liblxc1,
+               libproperties-cpp-dev,
+               libprotobuf-dev,
+               libsdl2-dev,
+               libsdl2-image-dev,
+               lxc-dev,
+               protobuf-compiler
 Standards-Version: 3.9.7
 Homepage: http://anbox.io
 Vcs-Browser: https://github.com/anbox/anbox
 Vcs-Git: https://github.com/anbox/anbox.git
+
+Package: anbox
+Architecture: any
+Depends: ${misc:Depends},
+         ${shlibs:Depends}
+Description: Container-based approach to boot a full Android system on a regular GNU/Linux system
+ .
+ Anbox is a container-based approach to boot a full Android system on a regular
+ GNU/Linux system like Ubuntu. In other words: Anbox will let you run Android
+ on your Linux system without the slowness of virtualization.
 
 Package: anbox-common
 Architecture: all
